--- a/projects/qybm-inc/aboutus.html
+++ b/projects/qybm-inc/aboutus.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
 <meta name="keywords" content="网站建设,案例展示,开发案例,中小企业,解决方案,PHP,HTML5">
 <meta name="description" content="我们专注互联网科技服务，相信我们能为您做到更好.">
-<title>【青云博美】</title>
+<title>【青云博美】关于我们</title>
 <link href="vendor/swiper/swiper-3.3.1.min.css" type="text/css" rel="stylesheet">
 <link href="css/global.css" type="text/css" rel="stylesheet">
 <link href="fonts/font.css" type="text/css" rel="stylesheet">
@@ -223,12 +223,19 @@
 
     <footer>
         <div class="container">
-            <div class="logo"><img src="image/logo.png" width="100%" /></div>
+            <div class="logo"><img src="image/logo.png" width="180" /></div>
             <ul class="contact-info">
                 <li>联系地址：北京市昌平区百沙路200号，青年创业大厦，B座921/1101</li>
                 <li>联系邮箱：work@qingyunbomei.com</li>
-                <li>技术服务热线：010-59453319</li>
-                <li>项目开发热线：53393133</li>
+                <li>项目开发热线：010-53393133</li>
+            </ul>
+            <div class="copyright">
+                <p>Copyright © 2016 　 All Rights Reserved　版权所有·北京青云博美科技有限公司   京ICP备案12048116号-3</p>
+            </div>
+            <ul class="links">
+                <li>诚聘英才</li>
+                <li>商务合作</li>
+                <li>联系方式</li>
             </ul>
         </div>
     </footer>
