--- a/projects/qybm-inc/advantage.html
+++ b/projects/qybm-inc/advantage.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
 <meta name="keywords" content="网站建设,案例展示,开发案例,中小企业,解决方案,PHP,HTML5">
 <meta name="description" content="我们专注互联网科技服务，相信我们能为您做到更好.">
-<title>【青云博美】</title>
+<title>【青云博美】优势强项</title>
 <link href="vendor/swiper/swiper-3.3.1.min.css" type="text/css" rel="stylesheet">
 <link href="css/global.css" type="text/css" rel="stylesheet">
 <link href="fonts/font.css" type="text/css" rel="stylesheet">
@@ -21,15 +21,17 @@
                     <span>青云博美</span>
                 </div>
                 <div class="logo-text left">
-                    <p class="title">移动互联网创新技术服务专家</p>
-                    <p class="sub-title">DEVELOPMENT AND SERVICES</p>
+                    <div>
+                        <p class="title">移动互联网创新技术服务专家</p>
+                        <p class="sub-title">DEVELOPMENT AND SERVICES</p>
+                    </div>
                 </div>
             </div>
             <div class="right">
                 <ul class="nav clearfix">
                     <li><a href="index.html">首页</a></li>
-                    <li class="current"><a href="aboutus.html">关于我们</a></li>
-                    <li><a href="advantage.html">优势强项</a></li>
+                    <li><a href="aboutus.html">关于我们</a></li>
+                    <li class="current"><a href="advantage.html">优势强项</a></li>
                     <li><a href="case.html">案例介绍</a></li>
                     <li><a href="contactus.html">联系我们</a></li>
                 </ul>
@@ -54,7 +56,7 @@
         <div class="app" id="app1">
             <div class="section-bg"><img src="image/field1.jpg" width="100%" /></div>
             <div class="content">
-                <div class="circle">
+                <div class="circle open">
                     <ul class="ring">
                         <li class="ringItem"><span><img src="image/circle_1_1.png" /></span></li>
                         <li class="ringItem"><span><img src="image/circle_1_2.png" /></span></li>
@@ -73,7 +75,7 @@
         <div class="app" id="app2">
             <div class="section-bg"><img src="image/field2.jpg" width="100%" /></div>
             <div class="content">
-                <div class="circle">
+                <div class="circle open">
                     <ul class="ring">
                         <li class="ringItem"><span><img src="image/circle_2_1.png" /></span></li>
                         <li class="ringItem"><span><img src="image/circle_2_2.png" style="width: 85px;"  /></span></li>
@@ -92,7 +94,7 @@
         <div class="app" id="app3">
             <div class="section-bg"><img src="image/field3.jpg" width="100%" /></div>
             <div class="content">
-                <div class="circle">
+                <div class="circle open">
                     <ul class="ring">
                         <li class="ringItem"><span><img src="image/circle_3_1.png" /></span></li>
                         <li class="ringItem"><span><img src="image/circle_3_2.png" /></span></li>
@@ -111,7 +113,7 @@
         <div class="app" id="app4">
             <div class="section-bg"><img src="image/field4.jpg" width="100%" /></div>
             <div class="content">
-                <div class="circle">
+                <div class="circle open">
                     <ul class="ring">
                         <li class="ringItem"><span><img src="image/circle_4_1.png" style="width: 50px;" /></span></li>
                         <li class="ringItem"><span><img src="image/circle_4_2.png" /></span></li>
@@ -142,12 +144,19 @@
 
     <footer>
         <div class="container">
-            <div class="logo"><img src="image/logo.png" width="100%" /></div>
+            <div class="logo"><img src="image/logo.png" width="180" /></div>
             <ul class="contact-info">
                 <li>联系地址：北京市昌平区百沙路200号，青年创业大厦，B座921/1101</li>
                 <li>联系邮箱：work@qingyunbomei.com</li>
-                <li>技术服务热线：010-59453319</li>
-                <li>项目开发热线：53393133</li>
+                <li>项目开发热线：010-53393133</li>
+            </ul>
+            <div class="copyright">
+                <p>Copyright © 2016 　 All Rights Reserved　版权所有·北京青云博美科技有限公司   京ICP备案12048116号-3</p>
+            </div>
+            <ul class="links">
+                <li>诚聘英才</li>
+                <li>商务合作</li>
+                <li>联系方式</li>
             </ul>
         </div>
     </footer>
