--- a/projects/qybm-inc/contactus.html
+++ b/projects/qybm-inc/contactus.html
@@ -21,17 +21,19 @@
                     <span>青云博美</span>
                 </div>
                 <div class="logo-text left">
-                    <p class="title">移动互联网创新技术服务专家</p>
-                    <p class="sub-title">DEVELOPMENT AND SERVICES</p>
+                    <div>
+                        <p class="title">移动互联网创新技术服务专家</p>
+                        <p class="sub-title">DEVELOPMENT AND SERVICES</p>
+                    </div>
                 </div>
             </div>
             <div class="right">
                 <ul class="nav clearfix">
                     <li><a href="index.html">首页</a></li>
-                    <li class="current"><a href="aboutus.html">关于我们</a></li>
+                    <li><a href="aboutus.html">关于我们</a></li>
                     <li><a href="advantage.html">优势强项</a></li>
                     <li><a href="case.html">案例介绍</a></li>
-                    <li><a href="contactus.html">联系我们</a></li>
+                    <li class="current"><a href="contactus.html">联系我们</a></li>
                 </ul>
             </div>
         </div>
@@ -39,19 +41,9 @@
 
     <!-- content -->
     <div class="main-content">
-        <div class="container contactus">
-            <div class="section-header">
-                <h2>
-                    <div class="right" style="width: 240px;text-align: center;">
-                        <p>联系我们</p>
-                        <p style="font-size:22px;color: #333;">CONTACT US</p>
-                    </div>
-                </h2>
-            </div>
-        </div>
-
         <div class="location">
             <div class="container">
+                <h2>项目开发热线：010-53393133</h2>
                 <div class="map-container">
                     <div id="baidumap"></div>
                 </div>
@@ -63,12 +55,19 @@
 
     <footer>
         <div class="container">
-            <div class="logo"><img src="image/logo.png" width="100%" /></div>
+            <div class="logo"><img src="image/logo.png" width="180" /></div>
             <ul class="contact-info">
                 <li>联系地址：北京市昌平区百沙路200号，青年创业大厦，B座921/1101</li>
                 <li>联系邮箱：work@qingyunbomei.com</li>
-                <li>技术服务热线：010-59453319</li>
-                <li>项目开发热线：53393133</li>
+                <li>项目开发热线：010-53393133</li>
+            </ul>
+            <div class="copyright">
+                <p>Copyright © 2016 　 All Rights Reserved　版权所有·北京青云博美科技有限公司   京ICP备案12048116号-3</p>
+            </div>
+            <ul class="links">
+                <li>诚聘英才</li>
+                <li>商务合作</li>
+                <li>联系方式</li>
             </ul>
         </div>
     </footer>
