--- a/projects/qybm-inc/index.html
+++ b/projects/qybm-inc/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
 <meta name="keywords" content="网站建设,案例展示,开发案例,中小企业,解决方案,PHP,HTML5">
 <meta name="description" content="我们专注互联网科技服务，相信我们能为您做到更好.">
-<title>【青云博美】</title>
+<title>【青云博美】首页</title>
 <link href="vendor/swiper/swiper-3.3.1.min.css" type="text/css" rel="stylesheet">
 <link href="css/global.css" type="text/css" rel="stylesheet">
 <link href="fonts/font.css" type="text/css" rel="stylesheet">
@@ -144,7 +144,7 @@
 
     <footer>
         <div class="container">
-            <p> 版权所有北京青云博美科技有限公司 京ICP备案</p>
+            <p> Copyright © 2016 　 All Rights Reserved　版权所有·北京青云博美科技有限公司   京ICP备案12048116号-3</p>
         </div>
     </footer>
 
