--- a/projects/qybm-inc/case.html
+++ b/projects/qybm-inc/case.html
@@ -53,7 +53,6 @@
         </div>
 
         <div class="cases">
-            <div class="section-bg"><img src="image/case-bg.png" width="100%" /></div>
             <div class="content">
                 <ul class="case-list">
                     <li><img src="image/apps/爱助家.png" alt="case"/><label>爱助家</label></li>
@@ -65,20 +64,19 @@
                     <li><img src="image/apps/懒人家政.png" alt="case"/><label>懒人家政</label></li>
                     <li><img src="image/apps/喵播直播.png" alt="case"/><label>喵播直播</label></li>
                     <li><img src="image/apps/圈克直播.png" alt="case"/><label>圈克直播</label></li>
-                    <li><img src="image/apps/小猪短租.png" alt="case"/><label>爱助家</label></li>
+                    <li><img src="image/apps/小猪短租.png" alt="case"/><label>小猪短租</label></li>
                     <li><img src="image/apps/一米鲜.png" alt="case"/><label>一米鲜</label></li>
-                    <li><img src="image/apps/优购商城.png" alt="case"/><label>优购商城</label></li>
                 </ul>
 
                 <div class="screens">
                     <div class="screen-left">
-                        <div class="screen-content"></div>
+                        <div class="screen-content"><img src="" width="100%" /></div>
                     </div>
                     <div class="screen-main">
-                        <div class="screen-content"></div>
+                        <div class="screen-content"><img src="" width="100%" /></div>
                     </div>
                     <div class="screen-right">
-                        <div class="screen-content"></div>
+                        <div class="screen-content"><img src="" width="100%" /></div>
                     </div>
                 </div>
             </div>
@@ -108,5 +106,26 @@
 
 <script src="vendor/jquery-1.11.0.min.js" type="text/javascript" ></script>
 <script src="js/scripts.js" type="text/javascript" ></script>
+<script type="text/javascript">
+$(function(){
+    function showScreenshots(label){
+        var base = 'image/apps/screenshots/'+label+'/';
+        $(".screen-left img").attr('src', base + 'left.jpeg');
+        $(".screen-main img").attr('src', base + 'main.jpeg');
+        $(".screen-right img").attr('src', base + 'right.jpeg');
+    }
+
+    $(".case-list li").mouseover(function(){
+        $(this).addClass("active");
+        $(this).siblings().removeClass("active");
+        var label = $(this).children("label").text();
+        showScreenshots(label);
+    });
+
+    var label = $(".case-list li.active").children("label").text();
+    showScreenshots(label);
+
+});
+</script>
 </body>
 </html>
