--- a/projects/qybm-inc/advantage.html
+++ b/projects/qybm-inc/advantage.html
@@ -41,103 +41,24 @@
 
     <!-- content -->
     <div class="main-content">
-        <div class="field">
-            <div class="section-header">
-                <h2>
-                    <div class="right">
-                        <p style="font-weight: bold;">以下方面<font style="color: #dc4633;">我们是专家</font></p>
-                        <p>外包公司太杂了，选择我们请您放心</p>
-                        <p>历尽万难 岁月磨难</p>
-                    </div>
-                </h2>
-            </div>
+        <div class="section1">
+            <img src="image/advantage/advantage-1.jpg" width="100%" />
         </div>
-
-        <div class="app" id="app1">
-            <div class="section-bg"><img src="image/field1.jpg" width="100%" /></div>
-            <div class="content">
-                <div class="circle open">
-                    <ul class="ring">
-                        <li class="ringItem"><span><img src="image/circle_1_1.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_1_2.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_1_3.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_1_4.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_1_5.png" style="width: 90px;" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_1_6.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_1_7.jpg" style="width: 85px;" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_1_8.png" /></span></li>
-                    </ul>
-                    <div class="center"><span><img src="image/circle_1_center.png" style="width: 56px;" /></span></div>
-                </div>
-            </div>
+        <div class="msection section2">
+            <img src="image/advantage/advantage-2.png" />
         </div>
-
-        <div class="app" id="app2">
-            <div class="section-bg"><img src="image/field2.jpg" width="100%" /></div>
-            <div class="content">
-                <div class="circle open">
-                    <ul class="ring">
-                        <li class="ringItem"><span><img src="image/circle_2_1.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_2_2.png" style="width: 85px;"  /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_2_3.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_2_4.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_2_5.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_2_6.png" style="width: 85px;" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_2_7.png" style="width: 85px;" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_2_8.png" /></span></li>
-                    </ul>
-                    <div class="center" style="background:#48d1ef"><span><img src="image/circle_1_center.png" style="width: 56px;" /></span></div>
-                </div>
-            </div>
+        <div class="msection section3">
+            <img src="image/advantage/advantage-3.png" />
         </div>
-
-        <div class="app" id="app3">
-            <div class="section-bg"><img src="image/field3.jpg" width="100%" /></div>
-            <div class="content">
-                <div class="circle open">
-                    <ul class="ring">
-                        <li class="ringItem"><span><img src="image/circle_3_1.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_3_2.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_3_3.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_3_4.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_3_5.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_3_6.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_3_7.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_3_8.png" /></span></li>
-                    </ul>
-                    <div class="center" style="background:#33d09b"><span><img src="image/circle_1_center.png" style="width: 56px;" /></span></div>
-                </div>
-            </div>
+        <div class="msection section4">
+            <img src="image/advantage/advantage-4.png" />
         </div>
-
-        <div class="app" id="app4">
-            <div class="section-bg"><img src="image/field4.jpg" width="100%" /></div>
-            <div class="content">
-                <div class="circle open">
-                    <ul class="ring">
-                        <li class="ringItem"><span><img src="image/circle_4_1.png" style="width: 50px;" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_4_2.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_4_3.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_4_4.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_4_5.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_4_6.png" style="width: 45px;" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_4_7.png" /></span></li>
-                        <li class="ringItem"><span><img src="image/circle_4_8.png" /></span></li>
-                    </ul>
-                    <div class="center" style="background:#cd6be2"><span><img src="image/circle_1_center.png" style="width: 56px;" /></span></div>
-                </div>
-            </div>
+        <div class="msection section5">
+            <img src="image/advantage/advantage-5.png" />
         </div>
-        
-        <div class="sbs">
+        <div class="msection section6">
             <div class="bg-top"></div>
-            <div class="container">
-                <div class="content">
-                    <h2>您觉得好是<font color="#E28901">我们最高理想</font></h2>
-                    <h3>做您的理想守护者</h3>
-                    <p>SIDE BY SIDE</p>
-                </div>
-            </div>
+            <img src="image/advantage/advantage-6.png" />
         </div>
     </div>
     <!-- end of content -->
