--- a/index.html
+++ b/index.html
@@ -4,313 +4,11 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
-<meta name="keywords" content="网站建设,案例展示,开发案例,中小企业,解决方案,PHP,HTML5">
-<meta name="description" content="我们专注互联网科技服务，相信我们能为您做到更好.">
-<title>【春泥科技】互联网一站式服务提供商</title>
-<link href="vendor/bootstrap/bootstrap.min.css" type="text/css" rel="stylesheet">
-<link href="vendor/swiper/swiper-3.3.1.min.css" type="text/css" rel="stylesheet">
-<link href="css/global.css" type="text/css" rel="stylesheet">
-<link href="css/styles.css" type="text/css" rel="stylesheet">
+<meta name="keywords" content="">
+<meta name="description" content="">
+<title>Hello World</title>
 </head>
 <body>
 
-<!-- NAVBAR ================================================== -->
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">
-                <img src="image/logo.png" alt="logo" />
-            </a>
-        </div>
-
-        <div class="collapse navbar-collapse navbar-right" id="navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">首页</a></li>
-        		<li><a href="#service">服务</a></li>
-                <li><a href="#case">案例</a></li>
-                <li><a href="#aboutus">关于我们</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<!-- Banner ================================================== -->
-<div class="banner_container">
-    <img src="image/banner-desktop.jpg" class="banner_bg" width="100%" alt="banner" />
-    <!--start-slider-->
-    <div class="banner swiper-container">
-        <ul class="swiper-wrapper">
-            <li class="swiper-slide">
-                <div class="caption">
-                    <h2>HTML5+响应式</h2>
-                    <h3>移动互联网最佳用户体验</h3>
-                </div>
-            </li>
-            <li class="swiper-slide">
-                <div  class="caption">
-                    <h2>PHP+MySql+Framework</h2>
-                    <h3>最成熟的Web开发方案</h3>
-                </div>
-            </li>
-            <li class="swiper-slide">
-                <div  class="caption">
-                    <h2>Json+Api</h2>
-                    <h3>更加方便易用的接口服务</h3>
-                </div>
-            </li>
-        </ul>
-        <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
-    </div>
-  <!--/.slider-->
-</div>
-<!-- /.carousel -->
-
-<!-- service ================================================== -->
-<div class="container content" id="service">
-    <div class="row row-header">
-        <h2>我们的服务<small>提供全方位的互联网科技服务</small></h2>
-    </div>
-    <div class="row">
-        <div class="col-md-3 col-sm-6">
-            <article>
-                <div class="article-content">
-                    <div class="a-img"><i class="service-icons icon-web"></i></div>
-                    <div class="a-title"><h3>网站建设</h3></div>
-                    <div class="a-description"><p>网站是一个公司的门户，代表着公司的形象，因此，美观性和稳定性非常重要。我们拥有优秀的前端开发技术，给您打造最好的用户体验。</p></div>
-                </div>
-            </article>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <article>
-                <div class="article-content">
-                    <div class="a-img"><i class="service-icons icon-mobile"></i></div>
-                    <div class="a-title"><h3>手机网站</h3></div>
-                    <div class="a-description"><p>在智能手机如此普及的今天，相信你我都见识到了移动互联网的威力，建设您的移动网站，让更多的客户了解到您的产品吧！</p></div>
-                </div>
-            </article>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <article>
-                <div class="article-content">
-                    <div class="a-img"><i class="service-icons icon-interface"></i></div>
-                    <div class="a-title"><h3>接口服务</h3></div>
-                    <div class="a-description"><p>是不是还在为缺少优秀的服务器开发人员而发愁，联系我们，轻松帮您搞定服务端数据接口服务。</p></div>
-                </div>
-            </article>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <article>
-                <div class="article-content">
-                    <div class="a-img"><i class="service-icons icon-android"></i></div>
-                    <div class="a-title"><h3>App开发</h3></div>
-                    <div class="a-description"><p>如果您想要为自己的产品打造一款个性的APP，我们也可以为您提供从客户端到后台的整套解决方案哦。</p></div>
-                </div>
-            </article>
-        </div>
-    </div>
-</div>
-<!-- /.service -->
-
-
-<!-- case ================================================== -->
-<div class="container-fluid" id="case">
-    <div class="row row-header">
-        <h2>成功案例<small>我们相信简单就是最好，因此我们崇尚简洁，拒绝臃肿和繁杂</small></h2>
-    </div>
-    <div class="row row-body">
-        <div class="col-md-3 col-sm-6">
-            <article>
-                <div class="case-content">
-                    <div class="case-img">
-                        <h3>中欧心血管学院</h3>
-                        <div class="device-bg">
-                            <span class="img-wramp"><img src="image/case/case-1.png"/></span>
-                        </div>
-                    </div>
-                    <div class="case-detail">
-                        <ul>
-                            <li>项目：中欧心血管学院</li>
-                            <li>服务：前端开发</li>
-                            <li>时间：一周</li>
-                        </ul>
-                    </div>
-                </div>
-            </article>
-        </div>
-
-        <div class="col-md-3 col-sm-6">
-            <article>
-                <div class="case-content">
-                    <div class="case-img">
-                        <h3>九九可视农场</h3>
-                        <div class="device-bg">
-                            <span class="img-wramp"><img src="image/case/case-2.png"/></span>
-                        </div>
-                    </div>
-                    <div class="case-detail">
-                        <ul>
-                            <li>项目：九九可视农场</li>
-                            <li>服务：前端开发</li>
-                            <li>时间：一周</li>
-                        </ul>
-                    </div>
-                </div>
-            </article>
-        </div>
-
-        <div class="col-md-3 col-sm-6">
-            <article>
-                <div class="case-content">
-                    <div class="case-img">
-                        <h3>行车记录仪</h3>
-                        <div class="device-bg mobile">
-                            <span class="img-wramp"><img src="image/case/case-mobile-1.jpg"/></span>
-                        </div>
-                    </div>
-                    <div class="case-detail">
-                        <ul>
-                            <li>项目：行车记录仪</li>
-                            <li>服务：APP+服务端整体开发</li>
-                            <li>时间：两个月</li>
-                        </ul>
-                    </div>
-                </div>
-            </article>
-        </div>
-
-        <div class="col-md-3 col-sm-6">
-            <article>
-                <div class="case-content">
-                    <div class="case-img">
-                        <h3>世纪金融</h3>
-                        <div class="device-bg">
-                            <span class="img-wramp"><img src="image/case/case-3.png"/></span>
-                        </div>
-                    </div>
-                    <div class="case-detail">
-                        <ul>
-                            <li>项目：世纪金融</li>
-                            <li>服务：前端开发</li>
-                            <li>时间：一周</li>
-                        </ul>
-                    </div>
-                </div>
-            </article>
-        </div>
-
-    </div>
-</div>
-<!-- /.case -->
-
-
-<!-- service ================================================== -->
-<div class="container content" id="aboutus">
-    <div class="row row-header">
-        <h2>关于我们<small>不断学习和创新，始终走在互联网行业最前沿</small></h2>
-    </div>
-    <div class="row row-container">
-        <div class="col-md-6 aboutus-pic">
-            <img src="image/about-us.jpg" width="100%"/>
-        </div>
-        <div class="col-md-6 aboutus-text">
-            <p>
-                春泥科技于2015年成立，这一年也是互联网+迅速发展并被认可的一年。
-我们的成立旨在为广大的商户以及单位提供更优质的互联网科技服务，用互联
-网带动和方便您的业务。我们将和大家一起携手共同走进互联网+时代。我们
-的服务项目有：企业网站建设，前端开发，服务端接口开发，服务器数据库域
-名等全方位服务以及移动客户端的开发。我们采用的技术有：响应式和HTML5
-页面制作技术，PHP+Mysql服务端开发技术。借助丰富的IT经验和先进的技术
-带给您最佳的用户体验。我们在提供互联网科技服务的同时，也一直在学习和创
-新，我们会努力走在互联网行业的最前沿，以便开发更加优秀的产品。
-            </p>
-            <div>
-                <ul class="contact-info" >
-                    <li>地址：北京市昌平区沙河镇松兰堡</li>
-                    <li>电话：15652203404</li>
-                    <li>邮编：102200</li>
-                    <li>邮箱：15652203404@163.com</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- /.case -->
-
-<footer class="container-fluid">
-    <div class="container">
-        <div class="col-md-3 col-sm-6">
-            <div class="footer-widget">
-                <dl>
-                    <dt><a href="#service">服务项目</a></dt>
-                    <dd>企业网站开发</dd>
-                    <dd>商业网站定制开发</dd>
-                    <dd>手机网站开发</dd>
-                    <dd>数据接口服务</dd>
-                    <dd>APP开发</dd>
-                </dl>
-            </div>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <div class="footer-widget">
-                <dl>
-                    <dt><a href="#service">解决方案</a></dt>
-                    <dd>Wordpress企业网站</dd>
-                    <dd>Ecshop购物网站</dd>
-                    <dd>Yii框架定制网站</dd>
-                    <dd>Json格式数据接口</dd>
-                    <dd>PhoneGap+Jqmobi移动App开发</dd>
-                    <dd>Android开发</dd>
-                </dl>
-            </div>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <div class="footer-widget">
-                <dl class="contact-us">
-                    <dt><a href="#aboutus">联系我们</a></dt>
-                    <dd><span class="footer-icon ico-call"> </span>15652203404</dd>
-                    <dd><span class="footer-icon ico-msg"> </span>15652203404@163.com</dd>
-                    <dd><span class="footer-icon ico-locator"> </span>北京市昌平区沙河镇松兰堡</dd>
-                </dl>
-            </div>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <div class="footer-widget">
-                <p>扫二维码加微信关注:</p>
-                <img class="wechat-qcode" src="image/qcode.png" />
-                <div class="bshare">
-                    <h5>将我们的主页分享到:</h5>
-                    <div class="bdsharebuttonbox"><a href="#" class="bds_more" data-cmd="more"></a><a title="分享到微信" href="#" class="bds_weixin" data-cmd="weixin"></a><a title="分享到QQ好友" href="#" class="bds_sqq" data-cmd="sqq"></a><a title="分享到QQ空间" href="#" class="bds_qzone" data-cmd="qzone"></a><a title="分享到新浪微博" href="#" class="bds_tsina" data-cmd="tsina"></a><a title="分享到linkedin" href="#" class="bds_linkedin" data-cmd="linkedin"></a></div>
-<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"24"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
-<div class="container-fluid copyright">
-        <p class="text-center">Copyright © 2016 All Rights Reserved. 
-            <a href="./" >春泥网</a> 版权所有  京ICP备16001774号
-        </p>
-</div>
-
-<script src="vendor/jquery-1.11.0.min.js" type="text/javascript" ></script>
-<script src="vendor/bootstrap/bootstrap.min.js" type="text/javascript" ></script>
-<script src="vendor/swiper/swiper-3.3.1.jquery.min.js"></script>
-<script src="js/script.js" type="text/javascript" ></script>
-<script>        
-  var mySwiper = new Swiper ('.swiper-container', {
-    // autoplay: 3000,
-    direction: "horizontal",
-    loop: true,
-    pagination: '.swiper-pagination',
-    paginationClickable: true
-  })        
-  </script>
 </body>
 </html>
