--- a/projects/yueba/index.html
+++ b/projects/yueba/index.html
@@ -10,7 +10,10 @@
 	<script type="text/javascript" src="./js/main.js"></script>
 	<link rel="stylesheet" type="text/css" href="./css/fonts/fonts.css">
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
-	<meta name="sharecontent" data-msg-img="" data-msg-title="" data-msg-content=""/>
+	<meta name="sharecontent" data-msg-img="http://xitengfei.github.io/static/logo.png" data-msg-title="" data-msg-content=""/>
+	<div id='wx_pic' style='margin:0 auto;display:none;'>
+		<img src='http://xitengfei.github.io/static/logo.png' />
+	</div>
 	<script type="text/javascript">
 	wx.config({
 	    debug: false, // 开启调试模式
