--- a/projects/yueba/index.html
+++ b/projects/yueba/index.html
@@ -10,9 +10,9 @@
 	<script type="text/javascript" src="./js/main.js"></script>
 	<link rel="stylesheet" type="text/css" href="./css/fonts/fonts.css">
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
-	<meta name="sharecontent" data-msg-img="http://xitengfei.github.io/static/logo.png" data-msg-title="" data-msg-content=""/>
+	<meta name="sharecontent" data-msg-img="./img/logo.png" data-msg-title="" data-msg-content=""/>
 	<div id='wx_pic' style='margin:0 auto;display:none;'>
-		<img src='http://xitengfei.github.io/static/logo.png' />
+		<img src='./img/logo.png' />
 	</div>
 	<script type="text/javascript">
 	wx.config({
@@ -48,7 +48,7 @@
   </head>
   <body>
 	<!-- copy these lines to your document: -->
-	<img src="http://xitengfei.github.io/static/logo.png" class="shareImg"/>
+	<img src="./img/logo.png" class="shareImg"/>
 
 	<div id="hype_container" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
 		<script type="text/javascript" charset="utf-8" src="hyperesources/hype_generated_script.js?63223"></script>
