--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
 <ul>
     <li><a href="https://xitengfei.github.io/blog">技术博客</a></li>
     <li><a href="https://xitengfei.github.io/resume">简历</a></li>
-    <li><a href="https://xitengfei.github.io/projects/nprplayer">NPR英语听力</a></li>
 </ul>
 
-
+<h2>Projects</h2>
+<ul>
+    <li><a href="https://xitengfei.github.io/projects/nprplayer" target="_blank">NPR英语听力</a></li>
+    <li><a href="http://qiming.chunni360.com/" target="_blank">在线起名</a></li>
+    <li><a href="http://xitengfei.github.io/projects/qybm-inc/" target="_blank">青云博美</a></li>
+    <li><a href="http://nocturnalwonderland.com/" target="_blank">Nocturnal</a></li>
+    <li><a href="http://www.iyuedan.com/" target="_blank">约单</a></li>
+</ul>
 
 
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
