--- a/resume/index.html
+++ b/resume/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-<title>郗腾飞的个人简历[PHP ENGINEER]</title>
-<meta name="keywords" content="PHP ENGINEER 个人简历 Web开发 PHP工程师">
+<title>郗腾飞的个人简历[FRONT END ENGINEER]</title>
+<meta name="keywords" content="FRONT END ENGINEER 个人简历 Web开发 前端工程师">
 <meta name="description" content="郗腾飞的个人简历[PHP ENGINEER]">
 <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 <style type="text/css">
@@ -30,7 +30,7 @@ header .avatar{position: absolute;top: 45px;right: 20px;background: #fff;padding
 <body>
 <div class="content-wrap container resume">
 	<header class="">
-		<h1 class="title">郗腾飞  <small>PHP ENGINEER</small></h1>
+		<h1 class="title">郗腾飞  <small>FRONT END ENGINEER</small></h1>
 		<ul class="header-infos">
 			<li><label>学历:</label>本科 </li>
 			<li><label>工作经验:</label>4年 </li>
@@ -45,22 +45,22 @@ header .avatar{position: absolute;top: 45px;right: 20px;background: #fff;padding
 		<section>
 			<h2 class="section-title"><span>简介</span></h2>
 			<div class="section-content">
-				<p>四年web前端和后端开发经验，熟悉OOP思想，熟练LAMP，GIT/SVN，TP/YII，H5/JS/CSS，善于学习，有较强解决难题的能力，工作认真，对代码质量有较高的要求。</p>
+				<p>四年web前后端开发经验，熟练H5/JS/JQuery/CSS，GIT/SVN，ThinkPHP/YII，善于学习，有较强解决难题的能力，工作认真，对代码质量有较高的要求。</p>
 			</div>
 		</section>
 		<section>
-			<h2 class="section-title"><span>项目经验</span></h2>
+			<h2 class="section-title"><span>工作经历</span></h2>
 			<div class="section-content experiences">
-				<h3 class="item-title"><div class="date">2015.3 — 至今</div><div class="company">北京华美汉盛信息技术有限公司</div><div class="role">PHP工程师</div></h3>
+				<h3 class="item-title"><div class="date">2015.3 — 至今</div><div class="company">北京华美汉盛信息技术有限公司</div><div class="role">前端工程师</div></h3>
 				<div class="item-content">
 					<p><b>工作内容：</b></p>
-					<p>服务于美国Insomniac公司的Festival网站项目。 担任项目Technical lead的角色，负责所有任务的开发和指导：
-					1.负责项目的开发，上线，优化，解决技术难题；
-					2.对在线站点进行维护，修复各种UI和功能的BUG，优化网站性能；
-					3.负责代码和解决方案的Review，培养团队新成员。
+					<p>在美国Insomniac公司的Festival项目中担任前端工程师，并作为项目的Technical lead，负责相关任务的开发和指导：<br>
+					1.负责项目的开发，上线，优化，解决技术难题；<br>
+					2.开发新的功能或需求；<br>
+					3.负责代码和解决方案的Review，培养团队新成员。<br>
 					</p>
 					<p><b>工作业绩：</b></p>
-					<p>开发了一些WordPress的插件，习惯将js的面向对象应用到开发中，用js开发了一些产品，如Sound Cloud音乐播放器，Meme Generator等，都得到了客户的一致好评。同时在项目中最大化地实现代码重用，避免做重复性的工作，经过对项目代码和结构的多次整合及优化后，开发效率得到了极大的提高。</p>
+					<p>工作期间开发了几个WordPress的主题和插件, 用js开发了一些产品, 如Sound Cloud音乐播放器, Meme Generator等, 都得到了客户的一致好评。同时在项目中最大化地实现代码重用，避免做重复性的工作，经过对项目代码和结构的多次整合及优化后，开发效率得到了极大的提高。由于该项目的主要工作内容偏向前端，接触到前端方面的东西较多，同时个人也感觉对前端产生了浓厚的兴趣，因此开始考虑转向前端开发。</p>
 				</div>
 
 				<h3 class="item-title"><div class="date">2014.7 — 2015.02</div><div class="company">莱客创新（北京）科技有限公司</div><div class="role">PHP工程师/组长</div></h3>  
@@ -85,14 +85,14 @@ header .avatar{position: absolute;top: 45px;right: 20px;background: #fff;padding
 		<section>
 			<h2 class="section-title"><span>项目经验</span></h2>
 			<div class="section-content">
-				<h3 class="item-title"><div class="title">Meme Generator</div><div class="role">PHP工程师</div><div class="date">2017.06 — 2017.06</div></h3>
+				<h3 class="item-title"><div class="title">Meme Generator</div><div class="role">前端工程师</div><div class="date">2017.06 — 2017.06</div></h3>
 				<div class="item-content">
 					<p><b>项目描述：</b></p>
 					<p>这是一个利用canvas技术做的在线合成图片的应用，用户可以放大或缩小，拖动上传的图片，输入自定义的文字，改变文字颜色，然后将合成的图片分享到facebook和twitter，也可以直接在线下载。为减轻服务器的压力，全部功能都是纯粹在浏览器端完成的，为实现分享功能, 图片也是直接从浏览器端先上传到S3存储服务上， 并对所有的js和css代码使用前端构建工具gulp进行了合并和压缩。</p>
 					<p><b>项目业绩：</b></p>
 					<p>项目上线后收到客户方的一致好评，并且根据谷歌GA的数据来看，用户使用体验良好。</p>
 				</div>
-				<h3 class="item-title"><div class="title">Sound Cloud 音乐播放器</div><div class="role">PHP工程师</div><div class="date">2016.04 — 2016.04</div></h3>
+				<h3 class="item-title"><div class="title">Sound Cloud 音乐播放器</div><div class="role">前端工程师</div><div class="date">2016.04 — 2016.04</div></h3>
 				<div class="item-content">
 					<p><b>项目描述：</b></p>
 					<p>开发一个基于Sound Cloud Javascript API的音乐播放器插件，要安装在客户所有的Festival站点上，并且需要实现切换页面时音乐播放不被打断的效果。解决方案是对全站开启了Ajax模式，从而实现切换页面音乐播放不暂停。由于Ajax模式的开启产生了很多问题， 然后将相关的一问题逐个进行了修复。今年又对代码进行了重构， 借鉴了Angular的思想将js代码模块化，优化过后的代码结构更加清晰，也易于扩展和维护。</p>
@@ -113,15 +113,12 @@ header .avatar{position: absolute;top: 45px;right: 20px;background: #fff;padding
 			<h2 class="section-title"><span>自我描述</span></h2>
 			<div class="section-content">
 <ol>
-	<li>有较多的项目经验，技术和知识面比较广泛，能较快地适应项目的开发。</li>
-	<li>熟练掌握Linux, Apache, Mysql, PHP, 熟悉TP, Yii, Yii2.0等框架， 熟练使用Git/Svn。</li>
-	<li>有丰富的API接口开发经验和多种开放平台对接经验。 </li>
-	<li>熟练掌握DIV+CSS, HTML5, Js/Jquery/Ajax等前端技术，熟悉JS面向对象，掌握WEB响应式开发。</li>
-	<li>掌握前端构建工具比如Gulp的使用， 对angular/vue/react等前端框架也有一定了解。</li>
-	<li>熟悉nosql技术， 在项目中使用过Mongodb, 消息队列, Memcache等。</li>
+	<li>熟练掌握DIV+CSS, HTML5, Js/Jquery/Ajax等前端技术，掌握WEB响应式开发。</li>
+	<li>熟悉JS面向对象, 喜欢js模块化开发，正在深入学习Vue和Reactjs。</li>
+	<li>掌握前端构建工具比如Gulp的使用，了解WebPack。 </li>
+	<li>有丰富的后台开发经验，并能熟练使用Git/Svn。</li>
 	<li>有较强的解决问题能力, 可以通过查看文档，Google搜索，自己尝试等方式，独立攻克技术难关，解决疑难杂症。</li>
 	<li>有很好的英文读写能力，能阅读英文文档，喜欢在stackoverflow找问题的答案。</li>
-	<li>做事认真，喜欢简洁明了的代码，喜欢化繁为简。</li>
 	<li>做事有条理，喜欢整理和总结，比如收藏代码，知识笔记等。</li>
 </ul>
 			</div>
