--- a/homepage/index.html
+++ b/homepage/index.html
@@ -4,17 +4,18 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-<title>Page Title</title>
+<title>Xi Tengfei</title>
 <!-- Meta tags -->
 <meta name="keywords" content="keywords"/>
 <meta name="description" content="description"/>
 <!-- Favicons -->
-<link rel="icon" href="./wolf.png" type="image/x-icon">
+<link rel="icon" href="./assets/wolf.png" type="image/x-icon">
 <!-- Styles -->
 <link href='http://fonts.font.im/css?family=Montserrat:400,700|Ubuntu:400,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="css/reset.css" />
-<link rel="stylesheet" href="css/xui.css" />
-<link rel="stylesheet" href="css/app.css" />
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<link rel="stylesheet" href="assets/css/reset.css" />
+<link rel="stylesheet" href="assets/css/xui.css" />
+<link rel="stylesheet" href="assets/css/app.css" />
 <style type="text/css"></style>
 </head>
 <body>
@@ -24,16 +25,16 @@
         <div class="xui-menu main-menu">
             <ul class="xui-menu-list">
                 <li class="xui-menu-item"><a href="#home" class="active">Home</a></li>
-                <li class="xui-menu-item"><a href="#home">Resume</a></li>
+                <li class="xui-menu-item"><a href="/resume/">Resume</a></li>
+                <li class="xui-menu-item"><a href="/blog/">Blog</a></li>
                 <li class="xui-menu-item"><a href="#home">Skills</a></li>
                 <li class="xui-menu-item"><a href="#home">Cases</a></li>
-                <li class="xui-menu-item"><a href="#home">Blog</a></li>
                 <li class="xui-menu-item"><a href="#home">contact</a></li>
             </ul>
         </div>
         <div class="xui-card home-card">
             <div class="xui-card-avatar">
-                <img class="avatar" src="img/me.jpg" />
+                <img class="avatar" src="assets/img/me3.jpg" />
             </div>
             <div class="xui-card-desc">
                 <h1 class="main-title">Hi, i'm <i class="accent-color">XiTengfei!</i></h1>
@@ -42,13 +43,22 @@
                 <div class="description">
                     <p>I'm not a genius, but I've been working hard.</p>
                 </div>
+                <div class="contact-info">
+                    <p>email:  447360803@qq.com / phone + 156 5220 3404</p>
+                </div>
             </div>
-
+            <div class="xui-card-footer">
+                <div class="social-btns">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-github"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                </div>
+            </div>
         </div>
     </div>
 </section>
 
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-<script src="app.js"></script>
+<script src="assets/app.js"></script>
 </body>
 </html>
