--- a/index.html
+++ b/index.html
@@ -4,32 +4,61 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-<title>腾飞的个人主页</title>
-<meta name="description" content="腾飞的个人主页">
+<title>Xi Tengfei</title>
+<!-- Meta tags -->
+<meta name="keywords" content="keywords"/>
+<meta name="description" content="description"/>
+<!-- Favicons -->
+<link rel="icon" href="./assets/wolf.png" type="image/x-icon">
+<!-- Styles -->
+<link href='http://fonts.font.im/css?family=Montserrat:400,700|Ubuntu:400,700' rel='stylesheet' type='text/css'>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<link rel="stylesheet" href="assets/css/reset.css" />
+<link rel="stylesheet" href="assets/css/xui.css" />
+<link rel="stylesheet" href="assets/css/app.css" />
+<style type="text/css"></style>
 </head>
 <body>
-<h1>欢迎来到腾飞的个人主页</h1>
 
-<ul>
-    <li><a href="https://xitengfei.github.io/blog">技术博客</a></li>
-    <li><a href="https://xitengfei.github.io/resume">简历</a></li>
-</ul>
-
-<h2>Projects</h2>
-<ul>
-    <li><a href="https://xitengfei.github.io/projects/nprplayer" target="_blank">NPR英语听力</a></li>
-    <li><a href="http://qiming.chunni360.com/" target="_blank">在线起名</a></li>
-    <li><a href="http://xitengfei.github.io/projects/qybm-inc/" target="_blank">青云博美</a></li>
-    <li><a href="http://nocturnalwonderland.com/" target="_blank">Nocturnal</a></li>
-    <li><a href="http://www.iyuedan.com/" target="_blank">约单</a></li>
-</ul>
-
-
-<div class="relax">
-    <h2>听音乐，放松一下</h2>
-    <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="//music.163.com/outchain/player?type=0&id=910592828&auto=1&height=430"></iframe>
-</div>
+<section id="body">
+    <div class="xui-container">
+        <div class="xui-menu main-menu">
+            <ul class="xui-menu-list">
+                <li class="xui-menu-item"><a href="#home" class="active">Home</a></li>
+                <li class="xui-menu-item"><a href="/resume/">Resume</a></li>
+                <li class="xui-menu-item"><a href="/blog/">Blog</a></li>
+                <li class="xui-menu-item"><a href="#home">Skills</a></li>
+                <li class="xui-menu-item"><a href="#home">Cases</a></li>
+                <li class="xui-menu-item"><a href="#home">contact</a></li>
+            </ul>
+        </div>
+        <div class="xui-card home-card">
+            <div class="xui-card-avatar">
+                <img class="avatar" src="assets/img/me3.jpg" />
+            </div>
+            <div class="xui-card-desc">
+                <h1 class="main-title">Hi, i'm <i class="accent-color">XiTengfei!</i></h1>
+                <h2 class="sub-title">A Front-end Developer</h2>
+                <hr>
+                <div class="description">
+                    <p>I'm not a genius, but I've been working hard.</p>
+                </div>
+                <div class="contact-info">
+                    <p>email:  447360803@qq.com / phone + 156 5220 3404</p>
+                </div>
+            </div>
+            <div class="xui-card-footer">
+                <div class="social-btns">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-github"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script src="assets/app.js"></script>
 </body>
 </html>
