--- a/homepage/index.html
+++ b/homepage/index.html
@@ -22,6 +22,7 @@
 
 <section id="body">
     <div class="xui-container">
+        
         <div class="xui-menu main-menu">
             <ul class="xui-menu-list">
                 <li class="xui-menu-item"><a href="#home" class="active">Home</a></li>
@@ -32,6 +33,7 @@
                 <li class="xui-menu-item"><a href="#home">contact</a></li>
             </ul>
         </div>
+
         <div class="xui-card home-card">
             <div class="xui-card-avatar">
                 <img class="avatar" src="assets/img/me3.jpg" />
@@ -55,6 +57,13 @@
                 </div>
             </div>
         </div>
+        <!-- end of home card -->
+<!-- 
+        <div class="xui-card resume-card">
+            
+        </div> -->
+        <!-- end of resume card -->
+
     </div>
 </section>
 
