--- a/homepage/index.html
+++ b/homepage/index.html
@@ -28,9 +28,9 @@
                 <li class="xui-menu-item"><a href="#home" class="active">Home</a></li>
                 <li class="xui-menu-item"><a href="/resume/">Resume</a></li>
                 <li class="xui-menu-item"><a href="/blog/">Blog</a></li>
-                <li class="xui-menu-item"><a href="#home">Skills</a></li>
+                <li class="xui-menu-item"><a href="#skills-card">Skills</a></li>
                 <li class="xui-menu-item"><a href="#case-card">Cases</a></li>
-                <li class="xui-menu-item"><a href="#home">contact</a></li>
+                <li class="xui-menu-item"><a href="#contact-card">contact</a></li>
             </ul>
         </div>
 
@@ -59,6 +59,21 @@
         </div>
         <!-- end of home card -->
 
+        <div class="xui-card list-view-card" id="skills-card">
+            <div class="card-title"><h2>Skills</h2></div>
+            <h3 class="card-item-title">Professional Skills</h3>
+            <ul class="list-view skill-list">
+                <li class="item">
+                    <div class="xui-progress">
+                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
+                        <span class="xui-progress-label">PHP</span>
+                        <span class="xui-progress-completed">60%</span>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <!-- end of skills card -->
+
         <div class="xui-card list-view-card" id="case-card">
             <div class="card-title"><h2>Cases</h2></div>
             <ul class="list-view">
@@ -67,7 +82,20 @@
                 </li>
             </ul>
         </div>
-        <!-- end of resume card -->
+        <!-- end of cases card -->
+        
+        <div class="xui-card list-view-card" id="contact-card">
+            <div class="card-title"><h2>Contact</h2></div>
+            <div class="contact-info-list">
+                <h4>Address</h4>
+                <p>ChangPing, Beijing, China</p>
+                <h4>Phone</h4>
+                <p>+86 15652203404</p>
+                <h4>Email</h4>
+                <p>447360803@qq.com</p>
+            </div>
+        </div>
+        <!-- end of contact card -->
 
     </div>
 </section>
