--- a/homepage/index.html
+++ b/homepage/index.html
@@ -27,10 +27,10 @@
             <ul class="xui-menu-list">
                 <li class="xui-menu-item"><a href="#home" class="active">Home</a></li>
                 <li class="xui-menu-item"><a href="/resume/">Resume</a></li>
-                <li class="xui-menu-item"><a href="/blog/">Blog</a></li>
                 <li class="xui-menu-item"><a href="#skills-card">Skills</a></li>
                 <li class="xui-menu-item"><a href="#case-card">Cases</a></li>
-                <li class="xui-menu-item"><a href="#contact-card">contact</a></li>
+                <li class="xui-menu-item"><a href="#contact-card">Contact</a></li>
+                <li class="xui-menu-item"><a href="/blog/">Blog</a></li>
             </ul>
         </div>
 
@@ -87,13 +87,31 @@
         <div class="xui-card list-view-card" id="contact-card">
             <div class="card-title"><h2>Contact</h2></div>
             <div class="contact-info-list">
-                <h4>Address</h4>
+                <h3 class="car-sub-title">Address</h3>
                 <p>ChangPing, Beijing, China</p>
-                <h4>Phone</h4>
+                <h3 class="car-sub-title">Phone</h3>
                 <p>+86 15652203404</p>
-                <h4>Email</h4>
+                <h3 class="car-sub-title">Email</h3>
                 <p>447360803@qq.com</p>
             </div>
+            <h3 class="car-sub-title">Send Me a Message</h3>
+            <form action="/" id="contactForm" class="form">
+                <div class="form-group">
+                    <input type="text" class="form-control" name="name" placeholder="Name" required/>
+                </div>
+                <div class="form-group">
+                    <input type="email" class="form-control" name="email" placeholder="Email" required/>
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" name="subject" placeholder="Subject" required/>
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control" name="message" placeholder="Message" required></textarea>
+                </div>
+                <div class="form-group">
+                    <input type="submit" class="submit-btn" value="Send😀" />
+                </div>
+            </form>
         </div>
         <!-- end of contact card -->
 
