--- a/homepage/index.html
+++ b/homepage/index.html
@@ -60,8 +60,8 @@
         <!-- end of home card -->
 
         <div class="xui-card list-view-card" id="skills-card">
-            <div class="card-title"><h2>Skills</h2></div>
-            <h3 class="card-item-title">Professional Skills</h3>
+            <h2 class="card-title">Skills</h2>
+            <h3 class="card-sub-title"><i class="fa fa-users" aria-hidden="true"></i>Professional Skills</h3>
             <ul class="list-view skill-list">
                 <li class="item">
                     <div class="xui-progress">
@@ -75,7 +75,7 @@
         <!-- end of skills card -->
 
         <div class="xui-card list-view-card" id="case-card">
-            <div class="card-title"><h2>Cases</h2></div>
+            <h2 class="card-title">Cases</h2>
             <ul class="list-view">
                 <li class="item">
                     <img src="assets/img/cases/thumb-p1.jpg" />
@@ -85,16 +85,16 @@
         <!-- end of cases card -->
         
         <div class="xui-card list-view-card" id="contact-card">
-            <div class="card-title"><h2>Contact</h2></div>
+            <h2 class="card-title">Contact</h2>
             <div class="contact-info-list">
-                <h3 class="car-sub-title">Address</h3>
+                <h3 class="card-sub-title">Address</h3>
                 <p>ChangPing, Beijing, China</p>
-                <h3 class="car-sub-title">Phone</h3>
+                <h3 class="card-sub-title">Phone</h3>
                 <p>+86 15652203404</p>
-                <h3 class="car-sub-title">Email</h3>
+                <h3 class="card-sub-title">Email</h3>
                 <p>447360803@qq.com</p>
             </div>
-            <h3 class="car-sub-title">Send Me a Message</h3>
+            <h3 class="card-sub-title">Send Me a Message</h3>
             <form action="/" id="contactForm" class="form">
                 <div class="form-group">
                     <input type="text" class="form-control" name="name" placeholder="Name" required/>
