--- a/homepage/index.html
+++ b/homepage/index.html
@@ -66,7 +66,71 @@
                 <li class="item">
                     <div class="xui-progress">
                         <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
+                        <span class="xui-progress-label">Comunication</span>
+                        <span class="xui-progress-completed">60%</span>
+                    </div>
+                </li>
+                <li class="item">
+                    <div class="xui-progress">
+                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
+                        <span class="xui-progress-label">Problem Solving</span>
+                        <span class="xui-progress-completed">60%</span>
+                    </div>
+                </li>
+                <li class="item">
+                    <div class="xui-progress">
+                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
+                        <span class="xui-progress-label">OOP</span>
+                        <span class="xui-progress-completed">60%</span>
+                    </div>
+                </li>
+            </ul>
+
+            <h3 class="card-sub-title"><i class="fa fa-users" aria-hidden="true"></i>Code Skills</h3>
+            <ul class="list-view skill-list">
+                <li class="item">
+                    <div class="xui-progress">
+                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
                         <span class="xui-progress-label">PHP</span>
+                        <span class="xui-progress-completed">60%</span>
+                    </div>
+                </li>
+                <li class="item">
+                    <div class="xui-progress">
+                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
+                        <span class="xui-progress-label">Html5/CSS3</span>
+                        <span class="xui-progress-completed">60%</span>
+                    </div>
+                </li>
+                <li class="item">
+                    <div class="xui-progress">
+                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
+                        <span class="xui-progress-label">Javascript</span>
+                        <span class="xui-progress-completed">60%</span>
+                    </div>
+                </li>
+            </ul>
+
+            <h3 class="card-sub-title"><i class="fa fa-users" aria-hidden="true"></i>Other Skills</h3>
+            <ul class="list-view skill-list">
+                <li class="item">
+                    <div class="xui-progress">
+                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
+                        <span class="xui-progress-label">Comunication</span>
+                        <span class="xui-progress-completed">60%</span>
+                    </div>
+                </li>
+                <li class="item">
+                    <div class="xui-progress">
+                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
+                        <span class="xui-progress-label">Linux</span>
+                        <span class="xui-progress-completed">60%</span>
+                    </div>
+                </li>
+                <li class="item">
+                    <div class="xui-progress">
+                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
+                        <span class="xui-progress-label">Git/svn</span>
                         <span class="xui-progress-completed">60%</span>
                     </div>
                 </li>
