--- a/homepage/index.html
+++ b/homepage/index.html
@@ -26,7 +26,7 @@
         <div class="xui-menu" id="main-menu">
             <ul class="xui-menu-list">
                 <li class="xui-menu-item"><a href="#home" class="active">Home</a></li>
-                <li class="xui-menu-item"><a href="/resume/">Resume</a></li>
+                <li class="xui-menu-item"><a href="#resume-card">Resume</a></li>
                 <li class="xui-menu-item"><a href="#skills-card">Skills</a></li>
                 <li class="xui-menu-item"><a href="#case-card">Cases</a></li>
                 <li class="xui-menu-item"><a href="#contact-card">Contact</a></li>
@@ -59,10 +59,34 @@
         </div>
         <!-- end of home card -->
 
-        <div class="xui-card list-view-card" id="skills-card">
+        <div class="xui-card" id="resume-card">
+            <h2 class="card-title">Resume</h2>
+            <ul class="list-view">
+                <li class="item">
+                    <img src="assets/img/cases/thumb-p1.jpg" />
+                </li>
+            </ul>
+        </div>
+        <!-- end of resume card -->
+
+        <div class="xui-card" id="skills-card">
             <h2 class="card-title">Skills</h2>
             <h3 class="card-sub-title"><i class="fa fa-users" aria-hidden="true"></i>Professional Skills</h3>
             <ul class="list-view skill-list">
+                <li class="item">
+                    <div class="xui-progress">
+                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
+                        <span class="xui-progress-label">PHP</span>
+                        <span class="xui-progress-completed">60%</span>
+                    </div>
+                </li>
+                <li class="item">
+                    <div class="xui-progress">
+                        <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
+                        <span class="xui-progress-label">PHP</span>
+                        <span class="xui-progress-completed">60%</span>
+                    </div>
+                </li>
                 <li class="item">
                     <div class="xui-progress">
                         <div class="xui-progress-bar" data-percent="60%" style="width: 60%;"></div>
@@ -84,7 +108,7 @@
         </div>
         <!-- end of cases card -->
         
-        <div class="xui-card list-view-card" id="contact-card">
+        <div class="xui-card" id="contact-card">
             <h2 class="card-title">Contact</h2>
             <div class="contact-info-list">
                 <h3 class="card-sub-title">Address</h3>
